# lepai

./: CMakeLists.txt  Doxyfile  README.md  results.html  script.py
include/parser/: fx_parser.h  node.h
include/tokenizer/: tokenizer.h
include/utils/: converters.h  utils.h
src/: benchmark.cpp  cnfsat2002.cpp  main.cpp
src/parser/: fx_parser.cpp  node.cpp
src/tokenizer/: tokenizer.cpp
src/utils/: converters.cpp  utils.cpp
